[project]
name = "warptestui"
version = "0.1.0"
description = "Test UI for Warp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx[http2]",
    "protobuf",
    "grpcio-tools",
    "python-dotenv",
    "websockets>=15.0.1",
    "requests>=2.32.5",
    "openai>=1.106.0",
]

[project.scripts]
warp-server = "server:main"
warp-test = "main:main"

# 添加这个部分来明确指定包
[tool.setuptools.packages.find]
include = ["protobuf2openai*", "warp2protobuf*"]
exclude = ["proto*"]

# 或者如果你想包含所有三个目录，使用：
# [tool.setuptools.packages.find]
# include = ["proto*", "protobuf2openai*", "warp2protobuf*"]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
